Update FFX JMH to version 1.0.0